GNOME Bugzilla – Bug 754867
timeline,nleobject,nlecomposition: leakage of pad and hashtable reference when disposing
Last modified: 2015-09-14 09:34:59 UTC
with valgrind, I could get a report of definitely lost. I attach the log from valgrind with this command G_SLICE=always-malloc G_DEBUG=gc-friendly /usr/bin/valgrind --tool=memcheck --leak-check=full --show-leak-kinds=all --num-callers=50 --error-limit=no --show-reachable=yes --show-possibly-lost=yes --undef-value-errors=no --workaround-gcc296-bugs=yes --log-file=ft_full_%p.log ges-launch-1.0 +clip ~/Downloads/big_buck_bunny_720p_50mb.mp4 inpoint=50 duration=1 -m and also I propose some patches easy to fix.
Created attachment 311112 [details] valgrind log
Created attachment 311113 [details] [review] [1/3] timeline: pad leakage
Created attachment 311114 [details] [review] [2/3] nleobject: don't leak srcpad
Created attachment 311115 [details] [review] [3/3] nlecomposition: don't leak hashtable
oops, the last one is "[3/3] nlecomposition: don't leak hashtable"
Should I squash together these patches?
commit ff388f1d9b7eb55ea749d0de014932d9e8d87a05 Author: Justin Kim <justin.kim@collabora.com> Date: Fri Sep 11 16:18:46 2015 +0900 nlecomposition: don't leak internal hashtable https://bugzilla.gnome.org/show_bug.cgi?id=754867 commit 937217021e484a59afd720c580a9901fe38d4626 Author: Justin Kim <justin.kim@collabora.com> Date: Fri Sep 11 16:13:19 2015 +0900 nleobject: don't leak srcpad when disposing https://bugzilla.gnome.org/show_bug.cgi?id=754867 commit fe2165cad3f249f706b4304d52764b6fa14c82d1 Author: Justin Kim <justin.kim@collabora.com> Date: Fri Sep 11 16:11:40 2015 +0900 timeline: don't leak pad in private structure