timeline: don't leak pad in private structure

https://bugzilla.gnome.org/show_bug.cgi?id=754867